GitVersion1/objects/CompetitorProtectedFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To be used in Competitor Update Request VF page</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competitor Protected Fields</label>
    <listViews>
        <fullName>Global_Competitor_Settings</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <label>Global Competitor Settings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Poland_Competitor_Settings</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Poland</value>
        </filters>
        <label>Poland Competitor Settings</label>
        <language>en_US</language>
    </listViews>
</CustomObject>